--- a/index.html
+++ b/index.html
@@ -307,6 +307,64 @@
             </div>
         </div>
 
+        <div class="info-page">
+            <div class="container">
+                <table class="info-blocks">
+                    <tr>
+                        <td class="info-photo">
+                            <img class="info-page-photo" src="img/6.jfif">
+                        </td>
+
+                        <td class="info-content">
+                            <div class="info-block1">
+                                <p class="info-main">SOME INFO</p>
+
+                                <p class="info-text">
+                                    Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula.
+                                </p>
+                            </div>
+                        </td>
+
+                        <td class="info-content">
+                            <div class="info-block1">
+                                <p class="info-main">ENFOLD HEALTH</p>
+
+                                <p class="info-text">
+                                    Main Street 1, Olcott
+                                    Buffalo, United States
+                                </p>
+
+                                <p class="info-adress"> +555 283 784 333
+                                <br> <span class="info-email"> office@enfold-health.com</span>
+                                </p>
+                                
+                            </div>
+                        </td>
+
+                        <td class="info-content">
+                            <div class="info-block1">
+                                <p class="info-main">OFFICE HOURS</p>
+
+                                <p class="info-text">
+                                    Mo-Fr: 8:00-19:00
+                                    <br>Sa: 8:00-14:00
+                                    <br>Su: closed
+                                </p>
+                            </div>
+                        </td>
+                    </tr>
+                </table>
+            </div>
+        </div>
+
+        <div class="footer">
+            <div class="container">
+                <div class="footer-content">
+                    
+                    <p class="footer-info"> © Copyright - ThriveTalk  2017</p>
+                </div>
+            </div>
+        </div>
 
     </body>
 
